@@ -322,6 +322,17 @@ Description: \n\r\
 This std lowers ones attack ability, and makes one infertile and uninterested \
 in sex.  It is the rare result of wandering around jungles.  It is spread sexually.
 
+SEXISM=DISEASE_HATRED
+RACISM=DISEASE_HATRED
+HATRED=DISEASE_HATRED
+DISEASE_HATRED=\
+Disease    : Hatred\n\r\
+Parameters : [GROUP NAME]=[ZAPPERMASK] ... etc\n\r\
+Example    : orcs="-race +orc"\n\r\
+Description: \n\r\
+This disease renders one unable to do business dealings, group with, or speak \
+politely to whatever group or groups they happen to hate.
+
 HEAT_EXHAUSTION=DISEASE_HEATEXHAUSTION
 DISEASE_HEATEXHAUSTION=\
 Disease    : Heat Exhaustion\n\r\
